--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.19.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
