--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.4",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
@@ -27,6 +28,7 @@
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.19.0",
+    "recharts": "^2.10.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
